# misis2024s-23-01-stepanova-a-v

./: .gitignore  CMakeLists.txt  codeforces.id  report.md  status.md
prj.app/: CmakeLists.txt
prj.app/robocrawl/: CmakeLists.txt  robocrawl.cpp
prj.app/timing_q/: CmakeLists.txt  timing_q.cpp
prj.codeforces/: 0004a.cpp  0032b.cpp  0041a.cpp  0050a.cpp  0061a.cpp  0071a.cpp  0110a.cpp  0116a.cpp  0136a.cpp  0141a.cpp  0148a.cpp  0151a.cpp  0155a.cpp  0158a.cpp  0200b.cpp  0228a.cpp  0231a.cpp  0236a.cpp  0263a.cpp  0266a.cpp  0271a.cpp  0276a.cpp  0282a.cpp  0339a.cpp  0427a.cpp  0469a.cpp  0472a.cpp  0546a.cpp  0581a.cpp  0677a.cpp  0705a.cpp  0732a.cpp  0734a.cpp  0791a.cpp  1030a.cpp  1283a.cpp  1328a.cpp  1335a.cpp  1352A.cpp  1371a.cpp  (+15 more)
prj.lab/: CMakeLists.txt
prj.lab/bitset/: CMakeLists.txt  bitset.cpp  bitset.hpp
prj.lab/complex/: complex.cpp  complex.hpp
prj.lab/dynarr/: CMakeLists.txt  dynarr.cpp  dynarr.hpp
prj.lab/queuearr/: CMakeLists.txt  queuearr.cpp  queuearr.hpp
prj.lab/queuearrt/: CmakeLists.txt  queuearrt.hpp
prj.lab/queuelst/: CMakeLists.txt  queuelst.cpp  queuelst.hpp
prj.lab/queuelstpr/: CMakeLists.txt  queuelstpr.cpp  queuelstpr.hpp
prj.lab/queuelstprt/: CmakeLists.txt  queuelstprt.hpp
prj.test/: CMakeLists.txt  test_bitset.cpp  test_complex.cpp  test_dynarr.cpp  test_queuearr.cpp  test_queuearrt.cpp  test_queuelst.cpp  test_queuelstpr.cpp  test_queuelstprt.cpp  test_queuelstt.cpp  test_rational.cpp  test_stackarr.cpp  test_stackarrt.cpp  test_stacklst.cpp  test_stacklstt.cpp  utils.hpp
project/: CMakeLists.txt  project.cpp
(+15 files in other folders)
